tests/abstract_locations_saved_state/abstract_locations_saved_state.exp
Error ------------------------------------------------------------------------------------------------------ foo.js:3:21

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| export function foo(x) { return x; }
                          ^


Error ------------------------------------------------------------------------------------------------------ foo.js:3:23

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   3| export function foo(x) { return x; }
                            



Found 2 errors
